[project]
name = "openlinktoken-cli"
version = "2.0.0-alpha"
requires-python = ">=3.10"
dynamic = [
  "authors",
  "dependencies",
  "description",
  "optional-dependencies",
  "readme",
  "urls",
]

[project.scripts]
openlinktoken = "openlinktoken_cli.main:main"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Prepend local source directories so edits in this worktree take priority
# over whatever version of the package is installed in the shared venv.
pythonpath = [
  "src/main",
  "../openlinktoken/src/main",
]
