[project]
name = "openlinktoken-cli"
version = "2.0.0"
requires-python = ">=3.10"
dynamic = [
  "authors",
  "description",
  "optional-dependencies",
  "readme",
  "urls",
]
dependencies = [
  "openlinktoken==2.0.0",
  "pandas==2.2.3; python_version < '3.11'",
  "pandas==3.0.3; python_version >= '3.11'",
  "pyarrow==24.0.0",
  "csv2parquet==0.0.9",
  "cryptography==49.0.0",
  "urllib3==2.7.0",
  "jwcrypto==1.5.7",
  "packaging==26.1",
]

[project.scripts]
olt = "openlinktoken_cli.main:main"

[build-system]
requires = ["setuptools==83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Prepend local source directories so edits in this worktree take priority
# over whatever version of the package is installed in the shared venv.
pythonpath = [
  "src/main",
  "../openlinktoken/src/main",
]
