[project]
name = "openlinktoken"
version = "2.0.0"
requires-python = ">=3.10"
dynamic = [
  "authors",
  "description",
  "optional-dependencies",
  "readme",
  "urls",
]
dependencies = [
  "cryptography==48.0.1",
  "jwcrypto==1.5.7",
]

[build-system]
requires = ["setuptools==82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
