[project]
name = "openlinktoken"
version = "2.1.0"
requires-python = ">=3.10"
dynamic = [
  "authors",
  "description",
  "optional-dependencies",
  "readme",
  "urls",
]
dependencies = [
  "cryptography==49.0.0",
  "jwcrypto==1.5.7",
  "PyYAML==6.0.3",
]

[build-system]
requires = ["setuptools==82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
