[project]
name = "opentoken-pyspark"
version = "2.0.0-alpha"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["src/test"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
