[project]
name = "opentoken-ext-hello-world"
version = "1.0.0"
requires-python = ">=3.10"
description = "OpenToken hello-world reference extension"
dependencies = []

[project.entry-points."opentoken.extensions"]
hello-world = "opentoken_ext_hello_world.extension:HelloWorldExtension"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/main"]

[tool.pytest.ini_options]
pythonpath = ["src/main", "../../opentoken-cli/src/main"]
